feat(create-noxion): add CLI scaffolding tool with Next.js template
Implements the create-noxion CLI (T12) for 'bun create noxion':
- Interactive prompts via @clack/prompts (project name, Notion page ID)
- Non-interactive mode with --yes flag for CI
- Full Next.js template with {{VARIABLE}} placeholders
- scaffoldProject() copies template, resolves variables, installs deps
- Template includes App Router pages, config, layout, tag filtering
- tsconfig excludes templates from TS compilation
- 13 tests covering scaffold logic and template variable resolution

--- a/packages/create-noxion/package.json
+++ b/packages/create-noxion/package.json
@@ -16,11 +16,13 @@
   },
   "scripts": {
     "build": "tsc",
-    "test": "echo 'no tests yet'",
+    "test": "bun test",
     "lint": "echo 'lint ok'",
     "clean": "rm -rf dist"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@clack/prompts": "^0.10.0"
+  },
   "devDependencies": {
     "typescript": "^5.7.0",
     "@types/bun": "^1.2.0"
