--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -16,6 +16,11 @@ SITE_DESCRIPTION=A blog powered by Notion and Noxion
 # Optional: Secret token for on-demand revalidation
 REVALIDATE_SECRET=
 
+# Optional: Download images at build time instead of proxying via next/image
+# Set to "true" to download Notion images to public/ during build (solves URL expiration permanently)
+# Default: not set (uses next/image proxy — recommended for most deployments)
+# NOXION_DOWNLOAD_IMAGES=true
+
 # Optional: Google Analytics
 NEXT_PUBLIC_GA_ID=
 
