--- a/packages/adapter-nextjs/package.json
+++ b/packages/adapter-nextjs/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@noxion/adapter-nextjs",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Next.js App Router integration, SEO utilities for Noxion",
+  "license": "MIT",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -11,20 +12,52 @@
       "types": "./dist/index.d.ts"
     }
   },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "sideEffects": false,
   "scripts": {
     "build": "tsc",
+    "release": "npm publish",
     "test": "bun test",
     "lint": "echo 'lint ok'",
     "clean": "rm -rf dist"
   },
+  "keywords": [
+    "notion",
+    "blog",
+    "nextjs",
+    "seo",
+    "noxion"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jiwonme/noxion.git",
+    "directory": "packages/adapter-nextjs"
+  },
+  "homepage": "https://github.com/jiwonme/noxion#readme",
+  "bugs": {
+    "url": "https://github.com/jiwonme/noxion/issues"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "peerDependencies": {
+    "next": ">=15.0.0"
+  },
   "dependencies": {
-    "@noxion/core": "workspace:*",
-    "next": "^16.1.6",
+    "@noxion/core": "^0.0.2",
     "notion-client": "^7.8.2"
   },
   "devDependencies": {
     "@types/bun": "^1.2.0",
     "@types/react": "^19.2.14",
+    "next": "^16.1.6",
     "typescript": "^5.7.0"
   }
 }
