--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@noxion/core",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Core data fetching, config, and plugin system for Noxion",
+  "license": "MIT",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -11,11 +12,39 @@
       "types": "./dist/index.d.ts"
     }
   },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "sideEffects": false,
   "scripts": {
     "build": "tsc",
+    "release": "npm publish",
     "test": "bun test",
     "lint": "echo 'lint ok'",
     "clean": "rm -rf dist"
+  },
+  "keywords": [
+    "notion",
+    "blog",
+    "cms",
+    "noxion"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jiwonme/noxion.git",
+    "directory": "packages/core"
+  },
+  "homepage": "https://github.com/jiwonme/noxion#readme",
+  "bugs": {
+    "url": "https://github.com/jiwonme/noxion/issues"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "notion-client": "^7.8.2",
