--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,10 @@
       "dependsOn": ["^build"],
       "outputs": ["dist/**", "build/**", ".next/**"]
     },
+    "release": {
+      "dependsOn": ["^release", "build"],
+      "cache": false
+    },
     "test": {
       "dependsOn": ["build"]
     },
