--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@noxion/core": "workspace:*",
     "@noxion/renderer": "workspace:*",
+    "@noxion/theme-default": "workspace:*",
     "@noxion/adapter-nextjs": "workspace:*",
     "next": "^16.1.6",
     "react": "^19.1.0",
