feat(renderer): visual polish — production-quality styles, PostCard text-only variant, notion CSS overrides
- Rewrite noxion.css with sticky header, backdrop-blur, refined dark palette
- PostCard: render description, text-only modifier, meta wrapper for date+tags
- globals.css: react-notion-x overrides for typography, code, images, dark mode
- Fix post detail layout by hiding .notion-aside (we use own TOC component)
- Sync theme tokens and CSS variable values across renderer + theme-default
- Add CSS export paths to renderer package.json

--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -10,14 +10,18 @@
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
-    }
+    },
+    "./styles": "./src/styles/noxion.css"
   },
   "files": [
     "dist",
+    "src/styles",
     "README.md",
     "LICENSE"
   ],
-  "sideEffects": false,
+  "sideEffects": [
+    "src/styles/**/*.css"
+  ],
   "scripts": {
     "build": "tsc",
     "release": "npm publish",
