--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,10 +19,8 @@
     "next": "^16.1.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-notion-x": "^7.8.2",
-    "notion-client": "^7.8.2",
-    "prismjs": "^1.30.0",
-    "katex": "^0.16.28"
+    "@noxion/notion-renderer": "workspace:*",
+    "notion-client": "^7.8.2"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
