--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -56,15 +56,12 @@
     "react-dom": ">=18.0.0"
   },
   "dependencies": {
-    "katex": "^0.16.28",
+    "@noxion/notion-renderer": "workspace:*",
     "notion-types": "^7.8.2",
-    "prismjs": "^1.30.0",
-    "react-notion-x": "^7.8.2"
+    "notion-utils": "^7.8.2"
   },
   "devDependencies": {
     "@types/bun": "^1.2.0",
-    "@types/katex": "^0.16.8",
-    "@types/prismjs": "^1.26.6",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
     "react": "^19.2.4",
