fix(notion-renderer): improve column layout, image sizing, frontmatter hiding, and add sticky TOC
- Fix 3+ column overflow with min-width: 0 and overflow: hidden
- Change image inline width to maxWidth for responsive column fit
- Replace word-break: break-word with overflow-wrap on captions
- Set base typography to letter-spacing: -0.01em, line-height: 1.6
- Auto-hide frontmatter code block from rendered output
- Add sticky TOC sidebar for floatFirstTOC: right frontmatter option
- Update renderer, theme-default, and web app styles

--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "@noxion/notion-renderer": "workspace:*",
+    "lucide-react": "^0.469.0",
     "notion-types": "^7.8.2",
     "notion-utils": "^7.8.2"
   },
