feat(web): switch to Carbon theme with IBM Research blog layout
Migrate web app imports to @noxion/theme-carbon. Home page now uses
FeaturedPostCard hero + FeedCard horizontal feed matching IBM Research.

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@noxion/core": "workspace:*",
     "@noxion/notion-renderer": "workspace:*",
     "@noxion/renderer": "workspace:*",
+    "@noxion/theme-carbon": "workspace:*",
     "@noxion/theme-default": "workspace:*",
     "noxion-plugin-reading-time": "workspace:*",
     "katex": "^0.16.33",
